# fcitx5-configtool

./: .gitignore  CMakeLists.txt  Messages.sh  README  README.md  config.h.in
.github/workflows/: check.yml
cmake/: FindIsoCodes.cmake
layout/: CMakeLists.txt  KeyboardLayoutWidget.cpp  KeyboardLayoutWidget.h  deadmapdata.h  kbd-layout-viewer.desktop  kbd-layout-viewer.desktop.in  kbd-layout-viewer5.desktop.in  keyboardlayoutwidget.cpp  keyboardlayoutwidget.h  main.cpp
po/: CMakeLists.txt  Messages.sh  ca.po  da.po  de.po  ja.po  kcm_fcitx.pot  kcm_fcitx5.pot  ko.po  ru.po  tr.po  vi.po  zh_CN.po  zh_TW.po
po/fcitx5-configtool/: CMakeLists.txt  ca.po  da.po  de.po  fcitx5-configtool.pot  fr.po  he.po  ja.po  ka.po  ko.po  ru.po  tr.po  vi.po  zh_CN.po  zh_TW.po
po/kcm_fcitx5/: CMakeLists.txt  LINGUAS  ca.po  da.po  de.po  es.po  fr.po  he.po  ja.po  kcm_fcitx5.pot  ko.po  ru.po  tr.po  vi.po  zh_CN.po  zh_TW.po
po/org.fcitx.fcitx5.kcm/: CMakeLists.txt  LINGUAS  ca.po  da.po  de.po  es.po  fr.po  he.po  ja.po  ko.po  org.fcitx.fcitx5.kcm.pot  ru.po  tr.po  vi.po  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  ConfigDescManager.cpp  ConfigDescManager.h  FcitxAddonSelector.cpp  FcitxAddonSelector.h  FcitxAddonSelector_p.h  FcitxConfigPage.cpp  FcitxConfigPage.h  FcitxConfigPage.ui  FcitxIM.cpp  FcitxIM.h  FcitxIMConfigDialog.cpp  FcitxIMConfigDialog.h  FcitxIMPage.cpp  FcitxIMPage.h  FcitxIMPage.ui  FcitxIMPage_p.h  FcitxLayout.cpp  FcitxLayout.h  FcitxSkinPage.cpp  FcitxSkinPage.h  FcitxSkinPage.ui  FcitxSkinPage_p.h  FcitxSubConfig.cpp  FcitxSubConfig.h  FcitxSubConfigParser.cpp  FcitxSubConfigParser.h  FcitxSubConfigPath.cpp  FcitxSubConfigPath.h  FcitxSubConfigPattern.cpp  FcitxSubConfigPattern.h  FcitxSubConfigWidget.cpp  FcitxSubConfigWidget.h  FcitxSubConfigWidget_p.h  Module.cpp  Module.h  addonselector.cpp  addonselector.h  addonselector.ui  addonselector_p.h  (+81 more)
src/configtool/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  org.fcitx.fcitx5-config-qt.desktop.in
src/kcm/: CMakeLists.txt  kcm_fcitx5.desktop.in  kcm_fcitx5.json  main.cpp  main.h  module.cpp  module.h  qtkeytrans.cpp  qtkeytrans.h  qtkeytransdata.h
src/kcm/package/: metadata.desktop  metadata.json
src/kcm/package/contents/ui/: AddIMPage.qml  AddonPage.qml  BoolOption.qml  ColorOption.qml  ConfigGroup.qml  ConfigPage.qml  EnumOption.qml  ExternalOption.qml  FontOption.qml  IntegerOption.qml  KeyListOption.qml  KeyOption.qml  ListOption.qml  OptionLoader.qml  SaveWarningDialog.qml  SelectLayoutSheet.qml  StringOption.qml  main.qml  utils.js
src/kcm/ui/: AddIMPage.qml  AddonPage.qml  BoolOption.qml  ColorOption.qml  ConfigGroup.qml  ConfigPage.qml  EnumOption.qml  ExternalOption.qml  FontOption.qml  IntegerOption.qml  KeyListOption.qml  KeyOption.qml  ListOption.qml  OptionLoader.qml  OptionalOption.qml  SaveWarningDialog.qml  SelectLayoutSheet.qml  StringOption.qml  main.qml  utils.js
src/lib/: CMakeLists.txt  addonselector.cpp  addonselector.h  categoryhelper.cpp  categoryhelper.h  configwidget.h  dbusprovider.cpp  dbusprovider.h  erroroverlay.cpp  erroroverlay.ui  fontbutton.cpp  fontbutton.h  impage.cpp  impage.h  impage.ui  iso639.cpp  layoutselector.cpp  layoutselector.h  listoptionwidget.cpp  logging.h  model.cpp  optionwidget.cpp  optionwidget.h  varianthelper.cpp  verticalscrollarea.cpp
src/lib/configlib/: CMakeLists.txt  addonmodel.cpp  addonmodel.h  dbusprovider.cpp  dbusprovider.h  font.cpp  font.h  imconfig.cpp  imconfig.h  iso639.cpp  iso639.h  layoutmodel.cpp  layoutmodel.h  layoutprovider.cpp  layoutprovider.h  logging.cpp  logging.h  model.cpp  model.h
src/lib/configwidgetslib/: CMakeLists.txt  addonselector.cpp  addonselector.h  addonselector.ui  categoryhelper.cpp  categoryhelper.h  configwidget.cpp  configwidget.h  erroroverlay.cpp  erroroverlay.h  erroroverlay.ui  fontbutton.cpp  fontbutton.h  fontbutton.ui  i18nhelper.h  impage.cpp  impage.h  impage.ui  keylistwidget.cpp  keylistwidget.h  layoutselector.cpp  layoutselector.h  layoutselector.ui  listoptionwidget.cpp  listoptionwidget.h  listoptionwidget.ui  optionaloptionwidget.cpp  optionaloptionwidget.h  optionwidget.cpp  optionwidget.h  varianthelper.cpp  varianthelper.h  verticalscrollarea.cpp  verticalscrollarea.h
src/migrator/: CMakeLists.txt
src/migrator/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  org.fcitx.fcitx5-migrator.desktop.in  progresspage.cpp  progresspage.h  progresspage.ui  taskpage.cpp  taskpage.h  taskpage.ui  welcomepage.cpp  welcomepage.h  welcomepage.ui
src/migrator/global/: CMakeLists.txt  globalconfigmigrator.cpp  globalconfigmigrator.h
src/migrator/kkc/: CMakeLists.txt  kkcmigrator.cpp  kkcmigrator.h  kkcmigrator.json
src/migrator/lib/: CMakeLists.txt  callbackrunner.cpp  callbackrunner.h  configmigrator.cpp  configmigrator.h  copydirectory.cpp  copydirectory.h  dbuscaller.cpp  dbuscaller.h  dbuswatcher.cpp  dbuswatcher.h  log.cpp  log.h  migrator.cpp  migrator.h  migratorfactory.cpp  migratorfactory.h  migratorfactory_p.h  migratorfactoryplugin.cpp  migratorfactoryplugin.h  pipeline.cpp  pipeline.h  pipelinejob.h  processrunner.cpp  processrunner.h  renamefile.cpp  renamefile.h
src/migrator/pinyin/: CMakeLists.txt  pinyinmigrator.cpp  pinyinmigrator.h  pinyinmigrator.json
src/migrator/rime/: CMakeLists.txt  rimemigrator.cpp  rimemigrator.h  rimemigrator.json
src/migrator/skk/: CMakeLists.txt  skkmigrator.cpp  skkmigrator.h
src/migrator/table/: CMakeLists.txt  tablemigrator.cpp  tablemigrator.h  tablemigrator.json
src/plasmathemegenerator/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  testconfigpage.cpp  testdummyconfig.cpp  testfontbutton.cpp
test/: CMakeLists.txt  layouttest.cpp
